[gd_scene load_steps=13 format=3 uid="uid://djkn3l1w5epvv"]

[ext_resource type="Script" path="res://components/bird.gd" id="1_ifewy"]
[ext_resource type="Texture2D" uid="uid://kr514ct82gls" path="res://art/bird_enemy.png" id="2_4a181"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rfi7l"]
size = Vector2(20, 2.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_73s5q"]
radius = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24h55"]
size = Vector2(25.7237, 13)

[sub_resource type="Animation" id="Animation_bdkfm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/damage/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/sense/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_oesuu"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 8, 9, 10, 9, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/damage/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/sense/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_w3hmg"]
resource_name = "death"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_qari6"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27, 28, 29, 30, 31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ye6gt"]
resource_name = "fly"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_ot882"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/damage/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gkjui"]
_data = {
"RESET": SubResource("Animation_bdkfm"),
"attack": SubResource("Animation_oesuu"),
"death": SubResource("Animation_w3hmg"),
"fall": SubResource("Animation_qari6"),
"fly": SubResource("Animation_ye6gt"),
"run": SubResource("Animation_ot882")
}

[node name="Bird" type="CharacterBody2D" groups=["bird"]]
script = ExtResource("1_ifewy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_rfi7l")

[node name="health" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="health"]
position = Vector2(-1, -13)
shape = SubResource("CircleShape2D_73s5q")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("2_4a181")
hframes = 33
frame = 1

[node name="damage" type="Area2D" parent="Sprite2D"]
position = Vector2(0, 16)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite2D/damage"]
polygon = PackedVector2Array(2, -38, 14, -33, 25, -18, 30, -5, 23, -4, 13, -1, -5, -24, 2, -37)
disabled = true

[node name="sense" type="Area2D" parent="Sprite2D"]
position = Vector2(0, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/sense"]
position = Vector2(11.6999, -16.517)
rotation = 0.862209
shape = SubResource("RectangleShape2D_24h55")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gkjui")
}

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="health" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="health" to="." method="_on_health_body_entered"]
[connection signal="area_entered" from="Sprite2D/damage" to="." method="_on_damage_area_entered"]
[connection signal="area_entered" from="Sprite2D/sense" to="." method="_on_sense_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
